--- a/src/components/Library1/SingleBook.css
+++ b/src/components/Library1/SingleBook.css
@@ -1,3 +1,4 @@
+
 .SingleBookContainer {
   display: flex;
   align-items: center;
@@ -14,8 +15,10 @@
   border-left: 8px solid #333;
   border-top: 8px solid #333;
   border-bottom: 8px solid #333;
-  margin-right: -4px;
+  margin-top: 70px;
+  margin-right: 110px;
   box-shadow: -4px 0 2px rgba(0, 0, 0, 0.308); 
+  transform: scale(1.3);
 }
 
 .RightPage {
@@ -23,11 +26,41 @@
   width: 380px;
   background-color: #f5deb3;
   border-radius: 8px;
+  margin-top: 70px;
   flex-direction: row;
   border-right: 8px solid #333;
   border-top: 8px solid #333;
   border-bottom: 8px solid #333;
   box-shadow: -4px 0 2px rgba(0, 0, 0, 0.308);
+  transform: scale(1.3);
+
+}
+
+.CheckOutButton{
+  font-weight: bold;
+  color: white;
+  background-color: #5c0000;
+  padding: 20px;
+  border-radius: 5px;
+  border: 3px solid #333;
+}
+
+.BackButton{
+  font-weight: bold;
+  color: white;
+  background-color: #5c0000;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 5px;
+  border: 3px solid#333;
+}
+
+.CheckOutButton:hover{
+  text-shadow: 3px 3px 15px rgba(255, 255, 255, 0.75), 0px 0px 10px rgba(255, 255, 255, 0.8); 
+}
+
+.BackButton:hover{
+  text-shadow: 3px 3px 15px rgba(255, 255, 255, 0.75), 0px 0px 10px rgba(255, 255, 255, 0.8); 
 }
 
 .SingleCoverImage {
@@ -41,7 +74,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  margin: 20px;
 }
 
 .SingleBookAuthor {
@@ -57,4 +90,25 @@
 }
 .SingleBookDescriptionTitle {
   margin-left: 10px;
+}
+
+
+/* MediaQuerys */
+@media (max-width: 1024px) {
+  .LeftPage {
+    transform: translateX(55px); 
+    margin-bottom: -200px;
+    margin-top: 10px;
+  }
+  
+  .RightPage {
+    transform: translateX(-55px); 
+    margin-bottom: -200px;
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 425px) {
+
+
 }
