--- a/src/index.css
+++ b/src/index.css
@@ -1,59 +1,15 @@
 body {
-  font-family: Georgia, serif;
-  background-color: rgb(107, 19, 19);
+  background-image: url("./assets/librarybg.png");
+  background-image: url("./assets/fancy-library.jpg");
+  background-image: url("./assets/library-white.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin: 0;
   padding: 0;
-}
-
-#logo-image {
-  width: 30px;
-  margin-right: 10px;
-}
-
-.container {
-  width: 80%;
-  margin: 2rem auto;
-  padding: 1rem;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-h1, h2 {
-  color: #333;
-  margin-bottom: 1rem;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-label {
-  margin-bottom: 0.5rem;
-  color: #555;
-}
-
-
-button {
-  padding: 0.75rem 1.5rem;
-  border: none;
-  background-color: #333;
-  color: #fff;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #555;
-}
-
-.account-details {
-  margin-top: 1rem;
-}
-
-.account-details p {
-  margin: 0.5rem 0;
-  color: #666;
+  height: 100vh;
+  font-family: Georgia, serif;
+  margin: 0;
+  padding: 0;
 }
